<resources>
    <string name="app_name">CS3270A7Olson</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="course_code">Course Code</string>
    <string name="course_edit">Course Edit</string>
    <string name="new_course">New Course</string>
    <string name="save">Save</string>
    <string name="show_database">Show Database</string>
    <string name="idview">ID:</string>
    <string name="test">Test</string>
    <string name="nameview">Name:</string>
    <string name="course_codeview">Course Code:</string>
    <string name="start_atview">Start At:</string>
    <string name="end_atview">End At:</string>
    <string name="name_required">Name(Required)</string>
    <string name="start_at">Start At</string>
    <string name="end_at">End At</string>
</resources>