<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:layout_width="match_parent"></androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/idLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/idview"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.27"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/idInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/boarder"
                android:text="@string/test"
                app:layout_constraintBottom_toBottomOf="@+id/idLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/idLabel"
                app:layout_constraintTop_toTopOf="@+id/idLabel" />

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/nameview"
                app:layout_constraintEnd_toEndOf="@+id/idLabel"
                app:layout_constraintTop_toBottomOf="@id/idLabel" />

            <TextView
                android:id="@+id/nameInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/boarder"
                android:text="@string/test"
                app:layout_constraintBottom_toBottomOf="@+id/nameLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/nameLabel"
                app:layout_constraintTop_toTopOf="@+id/nameLabel" />

            <TextView
                android:id="@+id/courseCodeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/course_codeview"
                app:layout_constraintEnd_toEndOf="@+id/idLabel"
                app:layout_constraintTop_toBottomOf="@id/nameLabel" />

            <TextView
                android:id="@+id/courseCodeInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/boarder"
                android:text="@string/test"
                app:layout_constraintBottom_toBottomOf="@+id/courseCodeLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/courseCodeLabel"
                app:layout_constraintTop_toTopOf="@+id/courseCodeLabel" />

            <TextView
                android:id="@+id/startAtLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/start_atview"
                app:layout_constraintEnd_toEndOf="@+id/idLabel"
                app:layout_constraintTop_toBottomOf="@id/courseCodeLabel" />

            <TextView
                android:id="@+id/startAtInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/boarder"
                android:text="@string/test"
                app:layout_constraintBottom_toBottomOf="@+id/startAtLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/startAtLabel"
                app:layout_constraintTop_toTopOf="@+id/startAtLabel" />

            <TextView
                android:id="@+id/endAtLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/end_atview"
                app:layout_constraintEnd_toEndOf="@+id/idLabel"
                app:layout_constraintTop_toBottomOf="@id/startAtLabel" />

            <TextView
                android:id="@+id/endAtInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/boarder"
                android:text="@string/test"
                app:layout_constraintBottom_toBottomOf="@+id/endAtLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/endAtLabel"
                app:layout_constraintTop_toTopOf="@+id/endAtLabel" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>